--- a/myCSS.css
+++ b/myCSS.css
@@ -8,14 +8,14 @@ body {
      	color: #000;
 }
 .homePage {
-	background: #255C48;
+	background: #69DBC4;
 }
 .container {
 	width: 960px;
 	margin: 0 auto;
 }
 .header {
-	background: #3E9C79;
+	background: #5DC2AE;
 	text-align: center;
 	margin: 0px;
 	padding: 5;
