--- a/myCSS.css
+++ b/myCSS.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 /* This is a comment! Text here will be ignored by the browser. */
 body {
-	font: 100%/1.4 Apple Chancery, cursive;
+	font: 100%/1.4 Chalkduster, fantasy, Apple Chancery, cursive;
      	background-color: #003887;
      	margin: 0;
      	padding: 0;
