--- a/myCSS.css
+++ b/myCSS.css
@@ -15,7 +15,7 @@ body {
 	margin: 0 auto;
 }
 .header {
-	background: #6FE8D0;
+	background: #D674C9;
 	text-align: center;
 	margin: 0px;
 	padding: 5;
