--- a/myCSS.css
+++ b/myCSS.css
@@ -52,7 +52,7 @@ a:link {
      color: #081F9E;
 }
 a:visited {
-     color: #72B3B2;
+     color: #081F9E;
 }
 a:hover, a:active, a:focus { 
      text-decoration: underline;
